--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container row justify-content-center col-lg-12">
         <div class="row to_do_container justify-content-center col-lg-10 ">
-            <div class="row mainDiv border-primary col-lg-4 justify-content-center m-5 p-2 pb-5">
+            <div class="row mainDiv border-primary col-lg-6 justify-content-center m-5 p-2 pb-5">
                 <div class="row col-lg-11 justify-content-center">
                     <h3 class="text-center pb-4">Todo list</h3>
                 </div>
@@ -20,9 +20,25 @@
                     <div class="row col-lg-11">
                         <input type="text" class="form-control" placeholder="Add the task" >
                     </div>
-                    <div class="row col-lg-1">
+                    <div class="row col-lg-1 pb-2">
                         <button class="btn btn-primary">+</button>
                     </div>
+                    <ul>    
+                        <li>
+                            <!-- <div class="col-10"> -->
+                                <label>AHJh hjdfhdfd</label>
+                        <!-- </div> -->
+
+                            <div >
+                                <i class="far fa-check-circle"></i>
+                            </div>
+                            <div >
+                                <i class="fas fa-trash-alt"></i>
+                            </div>
+                        </li>
+                        
+                            <!-- Adsds <i class="far fa-check-circle"></i><i class="fas fa-trash-alt"></i> -->                  
+                    </ul>
                 </div>
             </div>
         </div>
