--- a/index.html
+++ b/index.html
@@ -20,25 +20,17 @@
                     <div class="row col-lg-11">
                         <input type="text" class="form-control" placeholder="Add the task" >
                     </div>
-                    <div class="row col-lg-1 pb-2">
-                        <button class="btn btn-primary">+</button>
-                    </div>
-                    <ul>    
-                        <li>
-                            <!-- <div class="col-10"> -->
-                                <label>AHJh hjdfhdfd</label>
-                        <!-- </div> -->
-
-                            <div >
-                                <i class="far fa-check-circle"></i>
-                            </div>
-                            <div >
-                                <i class="fas fa-trash-alt"></i>
-                            </div>
-                        </li>
-                        
-                            <!-- Adsds <i class="far fa-check-circle"></i><i class="fas fa-trash-alt"></i> -->                  
-                    </ul>
+                    <div class="row col-lg-1 pb-3">
+                        <button class="btn btn-primary ">+</button>
+                    </div>  
+                    <table class="col-lg-10 ">
+                        <tr class="table-success col-lg-10 ">
+                            <td class="pb-2 pt-2 "><label class="ml-1">Have to eat</label></td>
+                            <td class="pb-2 pt-2 "><a href="dsd"><i class="far fa-check-circle text-center"></i></a></td>
+                            <td class="pb-2 pt-2 "><a href="ffd"><i class="fas fa-trash-alt text-center"></i></a></td>
+                        </tr>
+                    </table>
+                    
                 </div>
             </div>
         </div>
