functional but more bugs

--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
                 </div>
                 <div class="row col-lg-11 border-primary">
                     <div class="row col-lg-11">
-                        <input type="text" class="form-control" placeholder="Add the task" >
+                        <input id="todotext" type="text" class="form-control" placeholder="Add the task" >
                     </div>
                     <div class="row col-lg-1 pb-3">
-                        <button class="btn btn-primary ">+</button>
+                        <button class="btn btn-primary" onclick="addTOlist()" id="add">+</button>
                     </div>  
-                    <table class="col-lg-10 ">
-                        <tr class="table-success col-lg-10 ">
+                    <table id="tableTodo" class="col-lg-10 ">
+                        <!-- <tr class="table-success col-lg-10 ">
                             <td class="pb-2 pt-2 "><label class="ml-1">Have to eat</label></td>
                             <td class="pb-2 pt-2 "><a href="dsd"><i class="far fa-check-circle text-center"></i></a></td>
                             <td class="pb-2 pt-2 "><a href="ffd"><i class="fas fa-trash-alt text-center"></i></a></td>
-                        </tr>
+                        </tr> -->
                     </table>
                     
                 </div>
