--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
                     <div class="row col-lg-11">
                         <input id="todotext" type="text" class="form-control" placeholder="Add the task" >
                     </div>
-                    <div class="row col-lg-1 pb-3">
+                    <div class="row col-lg-1">
                         <button class="btn btn-primary" onclick="addTOlist()" id="add">+</button>
-                    </div>  
+                    </div> 
+                    <span id="altTextForTodotext" class="text-primary invalid-text small pb-2"></span> 
                     <table id="tableTodo" class="col-lg-10 ">
                         <!-- <tr class="table-success col-lg-10 ">
                             <td class="pb-2 pt-2 "><label class="ml-1">Have to eat</label></td>
